# battleisles

./: Cargo.toml  README.md  dockerfile  index.html
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
crates/battleisles_bevy/: Cargo.toml
crates/battleisles_bevy/src/: lib.rs  map_model.rs  map_model_plugin.rs  terrain_materials.rs
crates/battleisles_domain/: Cargo.toml
crates/battleisles_domain/src/: hex.rs  hex_map.rs  lib.rs  map.rs
crates/battleisles_editor/: Cargo.toml
crates/battleisles_editor/src/: lib.rs  ui.rs
crates/battleisles_game/: Cargo.toml
crates/battleisles_game/src/: battle_map.rs  center.rs  center_marker.rs  env.rs  lib.rs  map.rs  map_model.rs  ui.rs  unit.rs  water.rs
docker/: build-rust-bevy-builder.ps1  rust-bevy-builder.yml
editor/: Cargo.toml
editor/src/: main.rs
src/: battle_map.rs  hexx_mesh.rs  main.rs  ui.rs  unit.rs
